# trivia-wizard-2

./: .gitignore  README.md  context.md  inputs.json
backend/: Cargo.toml  Dockerfile  context.md
backend/src/: auth.rs  fake_data.rs  game_timer.rs  heartbeat.rs  infra.rs  lib.rs  main.rs  persistence.rs  server.rs  timer.rs
backend/src/handler/: host.rs  mod.rs  team.rs  watcher.rs
backend/src/model/: client_message.rs  game.rs  mod.rs  server_message.rs  types.rs
backend/tests/: common.rs  websocket_tests.rs
backend/tests/common/: mod.rs
backend/tests/integ/: answer_submission_test.rs  authentication_test.rs  auto_scoring_test.rs  connection_and_game_creation_test.rs  game_timer_test.rs  host_reconnection_test.rs  message_validation_test.rs  mod.rs  question_navigation_test.rs  server_lifecycle_test.rs  settings_test.rs  team_name_case_test.rs  team_reconnection_test.rs  watcher_test.rs
backend/tests/keys/: test_private.pem  test_public.pem
cdk/: cdk.context.json  context.md  package-lock.json  package.json
cdk/lib/: AuthStack.ts  HostingStack.ts  ServerStack.ts  constants.ts
docs/: api-examples.md  basic-hosting-auth-plan.md  code-review-notes.md  completed.md  frontend-structure.md  multiple-choice-design.md  new-question-type-guide.md  overview.md  proposed-api-shape.md  server-deployment-plan.md  stories.md  test-plan.md  ui-description.md
frontend/: .env.development  .env.production  context.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  HostLanding.tsx  LandingPage.tsx  LocalAuthProvider.tsx  ProtectedRoute.tsx  aws.ts  config.ts  main.tsx  types.ts
frontend/src/components/layout/: Header.tsx
frontend/src/components/ui/: Button.tsx  ColorButton.tsx  ConfirmationModal.tsx  Input.tsx  ProgressBar.tsx  ReconnectionToast.tsx  TimerDisplay.tsx  Toast.tsx
frontend/src/features/host/: HostGame.tsx  HostLanding.tsx
frontend/src/features/host/components/: AnswerCard.tsx  AnswerList.tsx  AutoSubmitNumericInput.tsx  GameSettings.tsx  McControlsBar.tsx  MultipleChoiceMainArea.tsx  PerQuestionSettings.tsx  QuestionControls.tsx  Scoreboard.tsx  SettingsModal.tsx  StandardMainArea.tsx
frontend/src/features/team/: TeamFlow.tsx
frontend/src/features/team/components/: ColorStep.tsx  JoinStep.tsx  MembersStep.tsx  MultipleChoiceAnswerInput.tsx  ScoreLogDrawer.tsx  StandardAnswerInput.tsx  TeamGameView.tsx  TeamHeader.tsx
frontend/src/features/watcher/: PublicScoreboard.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/services/: websocket.ts
frontend/src/stores/: useHostStore.ts  useTeamStore.ts  useWatcherStore.ts
frontend/src/utils/: colors.ts  rejoinStorage.ts
frontend/tests/: game-flow.spec.ts  helpers.ts  host.spec.ts  question-types.spec.ts  scoring.spec.ts  settings.spec.ts  speed-bonus.spec.ts  team-join.spec.ts  timer.spec.ts
