[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11"
log = "0.4"
tokio = { version = "1.36", features = ["full"] }
tokio-tungstenite = { version = "0.21", default-features = false, features = ["rustls-tls-webpki-roots", "connect"] }
futures-util = "0.3"
url = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.8.4"
aws-config = { version = "1.8.2", default-features = false, features = ["rustls", "rt-tokio"] }
aws-sdk-route53 = { version = "1.84.0", default-features = false, features = ["rustls"] }
reqwest = { version = "0.12.22", default-features = false, features = ["json", "rustls-tls"] }
aws-sdk-ec2 = {version = "1.152.0", default-features = false, features = ["rustls"] }
aws-sdk-ecs = {version = "1.91.0", default-features = false, features = ["rustls"] }
tower-http = { version = "0.5.0", features = ["cors"] }
anyhow = "1.0"
tokio-retry = "0.3"
rand = "0.9.2"
