[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[features]
test-support = []

[dev-dependencies]
backend = { path = ".", features = ["test-support"] }

[dependencies]
env_logger = "0.11"
log = "0.4"
tokio = { version = "1.49", features = ["full"] }
tokio-tungstenite = { version = "0.28", default-features = false, features = ["rustls-tls-webpki-roots", "connect"] }
futures-util = "0.3"
url = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.8.8"
aws-config = { version = "1.8.12", default-features = false, features = ["rustls", "rt-tokio"] }
aws-sdk-route53 = { version = "1.105.0", default-features = false, features = ["rustls"] }
reqwest = { version = "0.13.1", default-features = false, features = ["json", "blocking"] }
aws-sdk-ec2 = {version = "1.200.0", default-features = false, features = ["rustls"] }
aws-sdk-ecs = {version = "1.110.0", default-features = false, features = ["rustls"] }
tower-http = { version = "0.6.8", features = ["cors"] }
anyhow = "1.0"
tokio-retry = "0.3"
rand = "0.9.2"
jsonwebtoken = { version = "10.2", features = ["rust_crypto"] }
dotenvy = "0.15"
